container/resources/domain-mode-ha-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: |-
      [
        {
          "from":{
            "kind":"ImageStreamTag",
            "name":"jboss-eap8-domain-openjdk17-openshift:hc-latest"
          },
          "fieldPath":"spec.template.spec.containers[0].image"
        }
      ]
  name: domain-mode-ha-app
  labels:
    app.kubernetes.io/instance: domain-mode-ha-app
    app.kubernetes.io/name: domain-mode-ha-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: domain-mode-ha-app
      app.kubernetes.io/name: domain-mode-ha-app
  template:
    metadata:
      name: domain-mode-ha-app
      labels:
        app.kubernetes.io/instance: domain-mode-ha-app
        app.kubernetes.io/name: domain-mode-ha-app
        domain.member: demo
        app: hc-ha-openshift
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: domain-mode-ha-app
          livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/server/bin/launch/http-probe.sh
          initialDelaySeconds: 60
          startupProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/server/bin/launch/http-probe.sh
            initialDelaySeconds: 60
            readinessProbe:
              exec:
                command:
                - /bin/bash
                - -c
                - /opt/server/bin/launch/http-probe.sh
              initialDelaySeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9799
              protocol: TCP
              name: prometheus
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'jboss-eap8-domain-openjdk17-openshift:hc-latest'
          volumeMounts:
           - mountPath: /tmp/domain-init
             name: hc-init-secret
      volumes:
        - name: hc-init-secret
          secret:
            secretName: hc-setup
  strategy:
     type: RollingUpdate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
