container/resources/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-service
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: db-service-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hc-db-openshift
